--- a/ejs/views/index.ejs
+++ b/ejs/views/index.ejs
@@ -9,7 +9,7 @@
         <% if(data.length> 0) { %>
             <% data.forEach(item=> { %>
                 <h3>
-                    <%=item.title%>
+                    <%=item.username%>
                 </h3>
                 <%})%>
                     <%}%>
